# MatteFlow

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: high_quality_matting_prd.md  service_queue_residency_refactor_plan.md  technical_route_and_architecture.md
docs/superpowers/plans/: 2026-05-15-transparency-layered-fusion-v1.md  2026-05-18-gvm-aware-despeckle-swirl-protection.md  2026-05-18-gvm-model-checker-strict-runtime.md  2026-05-18-gvm-swirl-content-preserve.md  2026-05-18-gvm-vendored-runtime-completion.md  2026-05-18-heart-roi-effect-alpha-green-haze.md  2026-05-18-main-gui-auto-params-into-worktree.md  2026-05-18-worktree-models-fallback.md  2026-05-20-p0-3-diagnostics-center-implementation.md  2026-05-20-p0-4-startup-check-implementation.md  2026-06-10-green-screen-competitive-layer-composer.md  2026-06-16-project-consolidation.md  2026-06-24-matting-quality-system.md  2026-06-25-birefnet-quality-candidate.md
docs/superpowers/specs/: 2026-05-15-transparency-layered-fusion-v1-design.md  2026-05-18-main-gui-auto-params-into-worktree-design.md  2026-05-20-p0-3-diagnostics-center-design.md  2026-05-20-p0-4-startup-check-design.md  2026-05-20-p0-5-preview-service-design.md  2026-06-09-diagnose-gvm-input-priority-design.md  2026-06-10-green-screen-competitive-layer-composer-design.md  2026-06-16-project-consolidation-design.md  2026-06-23-processing-quality-report-design.md  (+2 more)
scripts/: configure_ffmpeg.ps1  count_vendor_ruff_errors.py  diagnose_gvm_fusion.py  download_models.py  fix_ruff_format_errors.py  fix_ruff_logic_risks.py  run_matting.py  start_gui.ps1  update_asset_manifest.py  web_gui.py
src/matteflow/: __init__.py  __main__.py  auto_params.py  cli.py  cli_app.py  config.py  diagnostics.py  errors.py  ffmpeg_env.py  gpu_monitor.py  job_queue.py  job_worker.py  pipeline.py  service.py  verify_preview_cleanup.py
src/matteflow/analysis/: __init__.py  (+4 more)
tests/: test_auto_params.py  test_cli_help.py  test_color_decontaminate.py  test_corridorkey_integration.py  test_corridorkey_vendored_imports.py  test_despeckle_soft_alpha.py  test_diagnostics.py  test_ffmpeg_env.py  test_gpu_monitor.py  test_green_screen_matte.py  test_gvm_alpha_resize.py  test_gvm_sequence_integration.py  test_gvm_speed_defaults.py  test_gvm_vendored_imports.py  test_input_formats_and_images.py  test_job_queue.py  test_job_worker.py  test_logging_instrumentation.py  test_matanyone2_sequence_integration.py  test_matanyone2_vendored_imports.py  test_model_checker_runtime.py  test_output_encoder.py  test_output_paths.py  test_run_matting_output_dir.py  test_service.py  test_temporal_stabilizer.py  test_transparency_layered_fusion.py  test_web_gui_defaults.py  test_web_gui_output_dir.py  test_web_gui_preview.py  test_web_gui_queue_integration.py
tests/core/: test_alpha_quality.py  test_birefnet_candidate.py  test_birefnet_matte.py  test_candidate_contracts.py  test_cli_app.py  test_diagnose_gvm_fusion.py  test_diagnostics.py  test_foreground_color_recovery.py  test_fusion_quality_gate.py  test_green_screen_fusion.py  test_green_screen_layer_composer.py  test_gvm_pipeline_unet_contract.py  test_gvm_runtime.py  test_hybrid_fusion_guard.py  test_hybrid_quality_selection.py  test_input_decoder.py  test_job_queue.py  test_job_worker.py  test_matte_fusion.py  test_matte_quality_evaluator.py  test_matting_quality_regression.py  test_model_paths.py  test_output_paths.py  test_p0_quality.py  test_pipeline_cancellation.py  test_pipeline_quality_debug.py  test_pipeline_quality_report.py  test_processing_report.py  test_quality_driven_matte.py  test_quality_regression.py  test_quality_selector.py  test_region_ownership.py  test_report_view.py  test_rvm_inference.py  test_selftest_frame_regressions.py  test_service.py  test_temporal_stabilizer.py
tests/refine/: test_edge_refiner.py
tests/web_gui/: test_quality_selection_controls.py  test_web_gui_defaults.py  test_web_gui_output_dir.py  test_web_gui_preview.py  test_web_gui_queue_integration.py
(+63 files in other folders)
