[project]
name = "matteflow"
version = "1.0.0"
description = "Professional video matting tool with AI and traditional algorithms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MatteFlow Team"},
]
keywords = ["matting", "green-screen", "chroma-key", "video", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pillow>=10.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "rembg>=2.0.50",
    "onnxruntime>=1.15.0",
    "gradio>=4.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.8",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
dev = ["pytest>=7.4", "black>=23.0", "ruff>=0.1.0"]

[project.scripts]
matteflow = "matteflow.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/MatteFlow"
Repository = "https://github.com/yourusername/MatteFlow"
Issues = "https://github.com/yourusername/MatteFlow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matteflow"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
